<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Dicio</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_header_subtitle">May I help you?</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="open_with">Open with</string>
    <string name="no_app_to_open_intent">No app on your device can open this</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="done">Done</string>
    <string name="permission_denied">Permission denied</string>
    <string name="text_input_hint">Ask me anything…</string>
    <string name="grant_microphone_permission">Grant microphone permission</string>
    <string name="error_loading">Error loading</string>
    <string name="error_unzipping">Error unzipping</string>
    <string name="error_downloading">Error downloading</string>
    <string name="unzipping">Unzipping…</string>
    <string name="download">Download</string>
    <string name="stt_not_available">Speech to Text not available</string>
    <string name="stt_download">Download Speech to Text</string>
    <string name="stt_unzip">Unzip Speech to Text</string>
    <string name="listening">Listening…</string>
    <string name="waiting">Waiting…</string>
    <string name="start_listening">Start listening</string>
    <string name="downloaded">Downloaded</string>
    <string name="loaded">Loaded</string>
    <string name="here_is_what_i_can_do">Here is what I can do!</string>
    <string name="all_skills_disabled_title">All skills are disabled</string>
    <string name="all_skills_disabled_description">Please enable some skills from settings, otherwise Dicio will not be able to do anything</string>
    <string name="action_text_input">Text input</string>
    <string name="action_voice_input">Voice input</string>
    <string name="microphone_error">Unable to access microphone, it is probably already in use or the relevant permission was denied.</string>
    <string name="vosk_model_notification_title">Vosk model</string>
    <string name="vosk_model_notification_description">Language: %1$s</string>
    <string name="vosk_model_unsupported_language">No Vosk model available for the current language</string>
    <string name="vosk_model_downloading">Downloading Vosk model…</string>
    <string name="vosk_model_extracting">Extracting Vosk model…</string>
    <string name="vosk_model_download_error">Downloading Vosk model failed</string>
    <string name="vosk_model_extraction_error">Extracting Vosk model from Zip failed</string>
    <string name="vosk_model_ready">Vosk model ready</string>
    <string name="android_tts_unsupported_language">The current language is not supported by the Android text to speech engine</string>
    <string name="android_tts_error">An error occurred while initializing the Android text to speech engine</string>
    <string name="settings">Settings</string>
    <string name="error_report">Report</string>
    <string name="error_title">Error report</string>
    <string name="error_sorry">Sorry, an error occurred</string>
    <string name="error_details_headline">Details:</string>
    <string name="error_details_labels">Action:\nLocale:\nGMT Time:\nPackage:\nVersion:\nOS version:</string>
    <string name="error_crash_log_headline">Crash log:</string>
    <string name="error_github_notice">Please check whether an issue discussing your crash already exists. When creating duplicate tickets, you take time from us which we could spend with fixing the actual bug.</string>
    <string name="error_copy_formatted">Copy formatted report</string>
    <string name="error_report_github">Report on GitHub</string>
    <string name="error_report_notification_title">Dicio encountered an error, tap to report</string>
    <string name="error_report_notification_toast">An error occurred, see the notification</string>
    <string name="error_report_channel_name">Error report notification</string>
    <string name="error_report_channel_description">Notifications to report errors</string>
    <string name="pref_io">Input and output methods</string>
    <string name="pref_general">General</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_skills_title">Skills</string>
    <string name="pref_skills_summary">Enable/disable skills and tune their behavior</string>
    <string name="expand">Expand</string>
    <string name="reduce">Reduce</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Choose the app color set</string>
    <string name="pref_theme_system">Use system theme</string>
    <string name="pref_theme_system_dark_black">Use system theme (use Black variant for dark theme)</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_black">Black</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">What language should Dicio use to listen to you and provide answers?</string>
    <string name="pref_language_system">Use system language</string>
    <string name="pref_input_method">Input method</string>
    <string name="pref_input_method_summary">Choose the service to use to talk to Dicio</string>
    <string name="pref_input_method_text">Only text box</string>
    <string name="pref_input_method_vosk">Vosk offline speech recognition</string>
    <string name="pref_input_method_vosk_summary">Downloads and runs a Vosk SpeechToText model offline inside Dicio</string>
    <string name="pref_input_method_external_popup">External SpeechToText popup</string>
    <string name="pref_input_method_external_popup_summary">Opens the UI of another app through ACTION\u200B_\u200BRECOGNIZE\u200B_\u200BSPEECH, for example whisperIME, Kõnele, Futo Voice Input</string>
    <string name="pref_speech_output_method">Speech output method</string>
    <string name="pref_speech_output_method_summary">Choose the service Dicio should use to talk to you</string>
    <string name="pref_speech_output_method_android">Android text to speech engine</string>
    <string name="pref_speech_output_method_toast">Toast (popup message)</string>
    <string name="pref_speech_output_method_snackbar">Snackbar (message at the bottom)</string>
    <string name="pref_speech_output_method_nothing">Nothing</string>
    <string name="pref_wake_method">Wake word recognition method</string>
    <string name="pref_wake_method_summary">Choose the service to use to listen for the \"Hey Dicio\" wakeup word in the background</string>
    <string name="pref_wake_method_disabled">Disabled</string>
    <string name="pref_wake_method_openwakeword">OpenWakeWord offline audio processing</string>
    <string name="pref_wake_custom_delete">Delete custom wake word</string>
    <string name="pref_wake_custom_delete_summary">Return to default \"Hey Dicio\" wake word</string>
    <string name="pref_wake_custom_import">Import custom wake word</string>
    <string name="pref_wake_custom_import_summary_oww">Replace the default \"Hey Dicio\" wake word with a custom TFLite model; you can download some custom models from github.com/dscripka/openWakeWord/releases</string>
    <string name="pref_skill_not_available">This skill is not yet available for your language. Contributions are welcome!</string>
    <string name="pref_skill_missing_permissions">Requires these permissions: %1$s</string>
    <string name="pref_skill_grant_permissions">Grant</string>
    <string name="pref_skill_number_library_not_available">The number parsing and formatting library <i>dicio-numbers</i> is not yet translated in your language, which means all of the skills related to numbers, durations and dates are not available. <b>Please contribute</b> if you can by tapping here!</string>
    <string name="pref_search_engine">Search engine</string>
    <string name="pref_search_engine_duckduckgo" translatable="false">DuckDuckGo</string>
    <string name="pref_weather_default_city">Default city</string>
    <string name="pref_weather_default_city_using_ip_info">Set the city to use for weather when you do not explicitly say one. The current behaviour is to get the location from IP info.</string>
    <string name="pref_stt_silence_duration_title">Maximum silence before start of speech</string>
    <string name="pref_stt_silence_duration_description">Give up listening after %1$d silent intervals</string>
    <string name="pref_stt_auto_finish_title">Directly send result of speech to text popup</string>
    <string name="pref_stt_auto_finish_summary_on">Automatically send speech result to requesting app when listening finishes</string>
    <string name="pref_stt_auto_finish_summary_off">Wait for manual confirmation before sending speech result to requesting app</string>
    <string name="pref_dynamic_colors_title">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">Use the Material You dynamic colors provided by the system</string>
    <string name="pref_stt_play_sound_title">Play sound when starting to listen</string>
    <string name="pref_stt_play_sound_summary">Choose whether to play a sound when your voice starts being recognized, and select the audio channel to play the sound on</string>
    <string name="pref_stt_play_sound_notification">Notification channel</string>
    <string name="pref_stt_play_sound_alarm">Alarm channel</string>
    <string name="pref_stt_play_sound_media">Default/media channel</string>
    <string name="pref_stt_play_sound_none">Do not play sound</string>
    <string name="perm_read_contacts">read your contacts</string>
    <string name="perm_call_phone">directly call phone numbers</string>
    <string name="perm_read_calendar">read your calendar</string>
    <string name="settings_description_with_value">%1$s — %2$s</string>
    <string name="eval_missing_permissions">The skill \"%1$s\" needs these permissions to work: %2$s</string>
    <string name="eval_fatal_error">Could not evaluate your request</string>
    <string name="eval_network_error">Network error</string>
    <string name="eval_network_error_description">Dicio could not reach the internet. Please check your connection and retry.</string>
    <string name="eval_no_match">I did not understand</string>
    <string name="eval_no_match_repeat">Could you repeat?</string>
    <string name="stt_say_something">Say something…</string>
    <string name="stt_did_not_understand">I could not understand, try again</string>
    <string name="stt_popup">Speech to text popup</string>
    <string name="skill_name_search">Search</string>
    <string name="skill_sentence_example_search">Search how to feed a cat</string>
    <string name="skill_name_weather">Weather</string>
    <string name="skill_sentence_example_weather">What\'s the weather like in Rome?</string>
    <string name="skill_name_lyrics">Song lyrics</string>
    <string name="skill_sentence_example_lyrics">What\'s the song that goes we will we will rock you?</string>
    <string name="skill_name_open">App opener</string>
    <string name="skill_sentence_example_open">Open NewPipe</string>
    <string name="skill_name_media">Media control</string>
    <string name="skill_sentence_example_media">Next song</string>
    <string name="skill_name_joke">Joke</string>
    <string name="skill_sentence_example_joke">Tell me a joke</string>
    <string name="skill_name_calculator">Calculator</string>
    <string name="skill_sentence_example_calculator">What is five times four minus a million?</string>
    <string name="skill_name_navigation">Navigation</string>
</resources>